syntax = "proto3";
package kiwi.iam.user.v1;

service KiwiIAM {
    rpc User(UserRequest) returns (UserResponse);
}

message UserRequest {
    string email = 1;
}

message UserResponse {
    int64 employee_number = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string position = 5;
    string department = 6;
    string location = 7;
    bool is_vendor = 8;
    string manager = 9;
    repeated string team_membership = 10;
}